# garmindownloader

./: .gitignore  README.md  authenticate.py  garmindownloader.py  garmindownloader_test.py  pyproject.toml  ruff.toml
.github/workflows/: release.yml
src/garmindownloader/: __init__.py  authenticate.py  cli.py  constants.py  downloader.py  exceptions.py
test/: garmindownloader_test.py
tests/: garmindownloader_test.py
