[project]
name = "garmindownloader"
version = "0.1.1"
description = "Garmin data downloader library."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "garminconnect>=0.2.30",
    "garth>=0.5.17",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
garmindownloader = "garmindownloader.cli:main"
garminauthenticate = "garmindownloader.authenticate:main"

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"
